@@ -109,7 +109,10 @@
    your system. */
 #undef PTHREAD_CREATE_JOINABLE
 
-/* The system-provided hash function. */
+/* The system-provided hash function, in namespace HASH_NAMESPACE. */
+#define SPARSEHASH_HASH_NO_NAMESPACE  hash_compare
+
+/* The system-provided hash function including the namespace. */
 #define SPARSEHASH_HASH  HASH_NAMESPACE::hash_compare
 
 /* Define to 1 if you have the ANSI C header files. */
